Further clean up